# forever-memory-leak-repro

./: CHANGELOG.md  LICENSE  cabal.project  forever-memory-leak-repro.cabal
app/: Main.hs
